# rslife

./: Cargo.toml  README  README.md
patterns/: gospel.rle  machinegun.rle  maximumvolatilitygun.rle  quadfuse.rle  quadraticsawtooth.rle  test.rle
src/: args.rs  game.rs  lib.rs  opt.rs  point.rs
src/gui/: app.rs  mod.rs  theme.rs
