[package]
name = "rslife"
description = "Simulation for Conway's Game of Life"
version = "0.1.0"
authors = ["Jonathan Dygert <jonathandygert@gmail.com>"]
edition = "2018"
readme = "README"
license = "MIT"
repository = "https://github.com/JonathanDygert/rslife"
keywords = ["conway", "life", "game", "simulation"]
categories = ["games", "simulation"]

[dependencies]
docopt = "1.1.0"
serde = { version = "1.0.94", features = ["derive"] }

scan-rules = "0.2.0"
rand = "0.7.0"

piston = "0.49.0"
piston2d-graphics = "0.32.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.65.0"
piston2d-drag_controller = "0.29.0"
